--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"vite\" \"tailwindcss -i ./src/assets/css/input.css -o ./src/assets/css/styles.css --watch\"",
     "build": "tsc && vite build",
+    "deploy": "tsc && vite build && copy CNAME dist && gh-pages -d dist",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
