--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.3",
     "@types/leaflet": "^1.9.12",
+    "concurrently": "^8.2.2",
     "leaflet": "^1.9.4",
     "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
